<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2011 Michael Imamura

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:fragment="org.lugatgt.zoogie.present.ui.AboutActivity$AboutFragment"
        android:title="@string/about_about_title"
        android:summary="@string/about_about_summary"/>

    <header
        android:fragment="org.lugatgt.zoogie.present.ui.AboutActivity$LicenseFragment"
        android:title="@string/about_license_title"
        android:summary="@string/about_license_summary"/>

</preference-headers>
